# Singularity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Singularity.sln  SingularityBackend.sln
Bindings/Beef/: Singularity.bf
Bindings/C#/: Singularity.cs
Singularity/: CMakeLists.txt  Defines.h  Singularity.vcxproj
Singularity.Core/: Defines.h  Singularity.Core.vcxproj
Singularity.Core/Core/: Application.cpp  Application.h  ContainerManager.cpp  ContainerManager.h  Engine.cpp  Engine.h  Types.h
Singularity.Core/Graphics/: GraphicsDefines.h  GraphicsSystem.cpp
Singularity/Core/: Application.cpp  Application.h  ContainerManager.cpp  ContainerManager.h  Engine.cpp  Engine.h  Types.h
Singularity/Graphics/: GraphicsSystem.h
Singularity/include/: Defines.h
Singularity/include/Core/: Engine.h  Log.h  RNG.h
Singularity/include/Graphics/: GraphicsEngine.h
Singularity/src/: Singularity.cpp
Singularity/src/Core/: Engine.cpp  Log.cpp
Singularity/src/Graphics/: GraphicsEngine.cpp
SingularityBackend/: Defines.h  SingularityBackend.vcxproj  SingularityBackend.vcxproj.filters
SingularityBackend/Core/: Engine.cpp  Types.h
SingularityBackend/Graphics/: GraphicsDefines.h  GraphicsSystem.h
